CPD-58 Improve API handling
