# cp-analyzer/database_handler.py
@@ -2,6 +2,7 @@ from models import Location, CompletedTrip, Cluster, CargoOrder
 import requests
 import json
 from logging import Logger
+from requests.exceptions import RequestException
 
 class DatabaseHandler:
 
@@ -58,11 +59,12 @@ class DatabaseHandler:
     def add_trips_to_db(self, trips: list[CompletedTrip]):
 
         for trip in trips:
-            response = requests.post(self.BASE_URL + "/trips", json=json.loads(json.dumps(trip, default=self.__custom_serializer)))
-            if response.status_code == 201:
-                print(f"Trips added to data base!")
-            else:
+            try:
+                response = requests.post(self.BASE_URL + "/trips", json=json.loads(json.dumps(trip, default=self.__custom_serializer)))
+                response.raise_for_status()  # This will raise an HTTPError for bad responses (4xx and 5xx)
+            except RequestException as e:
                 print('Failed to send trip to database: ', response.status_code, response.text)
+                raise
 
     def add_clusters(self, clusters: list[Cluster]):
         for cluster in clusters:
@@ -77,6 +79,6 @@ class DatabaseHandler:
             response = requests.post(url=url, json=json.loads(json.dumps(cargo_order, default=self.__custom_serializer)))
 
             if response.status_code == 201:
-                print(f"Cargo orders added to data base!")
+                print(f"Cargo orders added to database!")
             else:
                 print(f"Failed to upload chunk! Status code: {response.status_code}, {response.text}")
